--- a/nfc.html
+++ b/nfc.html
@@ -134,6 +134,38 @@
     return;
   }
 
+  // 🕒 Get current local time
+  const now = new Date();
+  const localNowTS = new Date(
+    now.getFullYear(),
+    now.getMonth(),
+    now.getDate(),
+    now.getHours(),
+    now.getMinutes(),
+    now.getSeconds()
+  ).getTime();
+
+  // 🔍 Check for booking conflicts
+  const bookingSnap = await get(ref(db, 'bookings/' + vehicleName));
+  if (bookingSnap.exists()) {
+    const allBookings = bookingSnap.val();
+    for (const bId in allBookings) {
+      const b = allBookings[bId];
+      const startTS = new Date(b.startTimeISO).getTime();
+      const endTS = new Date(b.endTimeISO).getTime();
+
+      if (localNowTS >= startTS && localNowTS < endTS) {
+        if (b.userName !== currentUser.email) {
+          messageEl.textContent = `⛔ Vehicle is currently booked by ${b.userName}. You can't sign it out.`;
+          actionBtn.style.display = 'none';
+          return;
+        }
+        break;
+      }
+    }
+  }
+
+  // ✅ Proceed with sign out
   await update(vehicleRef, {
     status: 'signedOut',
     CurrentlySignedOutBy: currentUser.email
