--- a/fleetmaster.html
+++ b/fleetmaster.html
@@ -14,7 +14,6 @@
       margin: 0;
       padding: 0;
     }
-
     header {
       background: #333;
       color: white;
@@ -23,7 +22,6 @@
       justify-content: space-between;
       align-items: center;
     }
-
     #logout-btn {
       background: #666;
       color: white;
@@ -32,33 +30,28 @@
       border-radius: 4px;
       cursor: pointer;
     }
-
     .container {
-      max-width: 1000px;
+      max-width: 1100px;
       margin: 2rem auto;
       background: white;
       padding: 2rem;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-
     h2 {
       text-align: center;
       margin-top: 0;
     }
-
     table {
       width: 100%;
       border-collapse: collapse;
       margin-top: 1rem;
     }
-
     th, td {
       padding: 1rem;
       text-align: left;
       border-bottom: 1px solid #ddd;
     }
-
     .toggle-btn {
       padding: 0.5rem 1rem;
       border: none;
@@ -66,25 +59,15 @@
       cursor: pointer;
       font-weight: bold;
     }
-
-    .atFrontDesk {
-      background-color: #f5a623;
-      color: white;
-    }
-
-    .withStaff {
-      background-color: #2ecc71;
-      color: white;
-    }
-
-    .available {
-      background-color: #3498db;
-      color: white;
-    }
-
-    .signedOut {
-      background-color: #e74c3c;
-      color: white;
+    .atFrontDesk { background-color: #f5a623; color: white; }
+    .withStaff { background-color: #2ecc71; color: white; }
+    .available { background-color: #3498db; color: white; }
+    .signedOut { background-color: #9b59b6; color: white; }
+    .alarmed { background-color: #ff4d4d !important; }
+    .alarm-icon {
+      color: red;
+      font-weight: bold;
+      margin-right: 0.5rem;
     }
   </style>
 </head>
@@ -101,8 +84,9 @@
     <thead>
       <tr>
         <th>Vehicle Name</th>
-        <th>Key Toggle</th>
-        <th>Status Toggle</th>
+        <th>Key Status</th>
+        <th>Vehicle Status</th>
+        <th>Alarm</th>
       </tr>
     </thead>
     <tbody></tbody>
@@ -137,53 +121,74 @@
     if (!user) {
       window.location.href = 'index.html';
     } else {
+      const now = Date.now();
       const vehiclesRef = ref(db, 'vehicles');
       const snap = await get(vehiclesRef);
       if (snap.exists()) {
         const vehicles = snap.val();
-        Object.keys(vehicles).forEach(name => {
-          const keyStatus = vehicles[name].keyStatus || 'atFrontDesk';
-          const vehicleStatus = vehicles[name].status || 'available';
-
+        Object.entries(vehicles).forEach(([name, data]) => {
+          const keyStatus = data.keyStatus || 'atFrontDesk';
+          const vehStatus = data.status || 'available';
+          const alarmEnabled = data.alarm || false;
+          const logs = data.logs || {};
           const row = document.createElement('tr');
 
-          // Vehicle name
           const nameCell = document.createElement('td');
           nameCell.textContent = name;
-          row.appendChild(nameCell);
 
-          // Key toggle
-          const keyCell = document.createElement('td');
           const keyBtn = document.createElement('button');
           keyBtn.textContent = keyStatus === 'atFrontDesk' ? 'Pass to Staff' : 'Return to Front Desk';
-          keyBtn.className = 'toggle-btn ' + (keyStatus === 'atFrontDesk' ? 'atFrontDesk' : 'withStaff');
+          keyBtn.className = 'toggle-btn ' + keyStatus;
           keyBtn.onclick = async () => {
             const newStatus = keyStatus === 'atFrontDesk' ? 'withStaff' : 'atFrontDesk';
-            await update(ref(db, 'vehicles/' + name), { keyStatus: newStatus });
+            await update(ref(db, 'vehicles/' + name), {
+              keyStatus: newStatus,
+              lastKeyChange: Date.now()
+            });
             location.reload();
           };
+
+          const vehBtn = document.createElement('button');
+          vehBtn.textContent = vehStatus === 'available' ? 'Mark as Signed Out' : 'Mark as Available';
+          vehBtn.className = 'toggle-btn ' + vehStatus;
+          vehBtn.onclick = async () => {
+            const newStatus = vehStatus === 'available' ? 'signedOut' : 'available';
+            await update(ref(db, 'vehicles/' + name), { status: newStatus });
+            location.reload();
+          };
+
+          const alarmBtn = document.createElement('button');
+          alarmBtn.textContent = alarmEnabled ? 'Disable Alarm' : 'Enable Alarm';
+          alarmBtn.className = 'toggle-btn';
+          alarmBtn.onclick = async () => {
+            await update(ref(db, 'vehicles/' + name), { alarm: !alarmEnabled });
+            location.reload();
+          };
+
+          const keyCell = document.createElement('td');
+          const vehCell = document.createElement('td');
+          const alarmCell = document.createElement('td');
+
           keyCell.appendChild(keyBtn);
+          vehCell.appendChild(vehBtn);
+          alarmCell.appendChild(alarmBtn);
+
+          const lastChange = data.lastKeyChange || 0;
+          const oneHour = 60 * 60 * 1000;
+          const overdue = (keyStatus === 'withStaff' && vehStatus === 'available' && now - lastChange > oneHour && alarmEnabled);
+
+          if (overdue) {
+            row.classList.add('alarmed');
+            const alertIcon = document.createElement('span');
+            alertIcon.textContent = '🚨';
+            alertIcon.className = 'alarm-icon';
+            nameCell.prepend(alertIcon);
+          }
+
+          row.appendChild(nameCell);
           row.appendChild(keyCell);
-
-          // Vehicle status toggle
-          const statusCell = document.createElement('td');
-          const statusBtn = document.createElement('button');
-          statusBtn.textContent = vehicleStatus === 'available' ? 'Mark as Signed Out' : 'Mark as Available';
-          statusBtn.className = 'toggle-btn ' + (vehicleStatus === 'available' ? 'available' : 'signedOut');
-          statusBtn.onclick = async () => {
-            const newStatus = vehicleStatus === 'available' ? 'signedOut' : 'available';
-            const updates = {
-              status: newStatus
-            };
-            if (newStatus === 'available') {
-              updates.CurrentlySignedOutBy = null;
-            }
-            await update(ref(db, 'vehicles/' + name), updates);
-            location.reload();
-          };
-          statusCell.appendChild(statusBtn);
-          row.appendChild(statusCell);
-
+          row.appendChild(vehCell);
+          row.appendChild(alarmCell);
           tableBody.appendChild(row);
         });
       }
