--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Fleet Login</title>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Fleet Login</title>
   <style>
     body {
       background: #f0f0f0;
-      margin: 0; 
-      padding: 0; 
+      margin: 0;
+      padding: 0;
       font-family: sans-serif;
-      display: flex; 
-      justify-content: center; 
-      align-items: center; 
+      display: flex;
+      justify-content: center;
+      align-items: center;
       height: 100vh;
     }
     .login-container {
@@ -22,107 +22,94 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
       text-align: center;
     }
-    h1 {
-      margin-bottom: 1rem;
-    }
-    input {
-      display: block;
+    input, button {
       margin: 0.5rem auto;
       padding: 0.5rem;
+      font-size: 1rem;
+      display: block;
       width: 200px;
-      font-size: 1rem;
-    }
-    button {
-      margin-top: 1rem;
-      padding: 0.5rem 1rem;
-      font-size: 1rem;
-      cursor: pointer;
     }
     #message {
-      margin-top: 1rem;
       color: red;
+      margin-top: 1rem;
     }
   </style>
-  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="login-container">
+    <h1>Fleet Login</h1>
+    <input type="email" id="login-email" placeholder="Email" />
+    <input type="password" id="login-password" placeholder="Password" />
+    <button id="login-btn">Login</button>
+    <div id="message"></div>
+  </div>
 
-<div class="login-container">
-  <h1>Fleet Login</h1>
-  <input type="email" id="login-email" placeholder="Email" />
-  <input type="password" id="login-password" placeholder="Password" />
-  <button id="login-btn">Login</button>
-  <div id="message"></div>
-</div>
+  <script type="module">
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js';
+    import { getAuth, signInWithEmailAndPassword } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js';
+    import { getDatabase, ref, get, set, child } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
 
-<!-- Firebase scripts -->
-<script type="module">
-  import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js';
-  import { getAuth, signInWithEmailAndPassword } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js';
-  import { getDatabase, ref, get, set, child } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
+    const firebaseConfig = {
+      apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
+      authDomain: "yfned-fleet-nfc.firebaseapp.com",
+      databaseURL: "https://yfned-fleet-nfc-default-rtdb.firebaseio.com",
+      projectId: "yfned-fleet-nfc",
+      storageBucket: "yfned-fleet-nfc.appspot.com",
+      messagingSenderId: "482363667898",
+      appId: "1:482363667898:web:4b0364e891a221e9631983"
+    };
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
-    authDomain: "yfned-fleet-nfc.firebaseapp.com",
-    databaseURL: "https://yfned-fleet-nfc-default-rtdb.firebaseio.com",
-    projectId: "yfned-fleet-nfc",
-    storageBucket: "yfned-fleet-nfc.appspot.com",
-    messagingSenderId: "482363667898",
-    appId: "1:482363667898:web:4b0364e891a221e9631983",
-    measurementId: "G-LK66DQVKW4"
-  };
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getDatabase(app);
 
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-  const db = getDatabase(app);
+    const loginBtn = document.getElementById('login-btn');
+    const emailInput = document.getElementById('login-email');
+    const passInput = document.getElementById('login-password');
+    const msgDiv = document.getElementById('message');
 
-  const loginBtn = document.getElementById('login-btn');
-  const emailInput = document.getElementById('login-email');
-  const passInput = document.getElementById('login-password');
-  const msgDiv = document.getElementById('message');
+    const queryParams = new URLSearchParams(window.location.search);
+    const redirectPage = queryParams.get("redirect");
+    const vehicle = queryParams.get("vehicle");
 
-  loginBtn.addEventListener('click', async () => {
-    msgDiv.textContent = '';
-    const email = emailInput.value;
-    const pass = passInput.value;
+    loginBtn.addEventListener('click', async () => {
+      msgDiv.textContent = '';
+      const email = emailInput.value;
+      const pass = passInput.value;
 
-    if (!email || !pass) {
-      msgDiv.textContent = 'Please enter email and password.';
-      return;
-    }
+      if (!email || !pass) {
+        msgDiv.textContent = 'Please enter email and password.';
+        return;
+      }
 
-    try {
-  const userCredential = await signInWithEmailAndPassword(auth, email, pass);
-  const user = userCredential.user;
-  console.log("Signed in:", user);
+      try {
+        const userCredential = await signInWithEmailAndPassword(auth, email, pass);
+        const user = userCredential.user;
 
-  const userRef = ref(db, 'users/' + user.uid);
-  const userSnap = await get(userRef);
-  console.log("User snapshot:", userSnap.exists());
+        const userRef = ref(db, 'users/' + user.uid);
+        const userSnap = await get(userRef);
 
-  if (!userSnap.exists()) {
-    await set(userRef, {
-      email: user.email,
-      role: 'staff'
+        if (!userSnap.exists()) {
+          await set(userRef, {
+            email: user.email,
+            role: 'staff'
+          });
+        }
+
+        const roleSnap = await get(child(ref(db), `users/${user.uid}/role`));
+        const role = roleSnap.exists() ? roleSnap.val() : 'staff';
+
+        if (redirectPage && vehicle) {
+          window.location.href = `${redirectPage}?vehicle=${encodeURIComponent(vehicle)}`;
+        } else if (role === 'fleetmaster') {
+          window.location.href = 'fleetmaster.html';
+        } else {
+          window.location.href = 'calendar.html';
+        }
+      } catch (err) {
+        msgDiv.textContent = 'Login failed: ' + err.message;
+      }
     });
-  }
-
-      // Get role and redirect
-const roleSnap = await get(child(ref(db), `users/${user.uid}/role`));
-const role = roleSnap.exists() ? roleSnap.val() : 'staff';
-
-if (role === 'fleetmaster') {
-  window.location.href = 'fleetmaster.html';
-} else {
-  window.location.href = 'calendar.html';
-}
-
-    } catch (err) {
-  console.error("Auth Error:", err);
-  msgDiv.textContent = 'Login failed: ' + err.message;
-}
-  });
-</script>
-
+  </script>
 </body>
 </html>
