--- a/keyhand.html
+++ b/keyhand.html
@@ -14,12 +14,7 @@
       text-align: center;
       padding: 3rem;
     }
-
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-    }
-
+    h1 { font-size: 2rem; margin-bottom: 1rem; }
     #status {
       font-size: 1.25rem;
       margin-top: 2rem;
@@ -30,11 +25,12 @@
 </head>
 <body>
   <h1>YFNED Key Handoff</h1>
-  <div id="status">Checking tag...</div>
+  <div id="status">Checking login...</div>
 
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js';
     import { getDatabase, ref, get, update, push, set } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
+    import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js';
 
     const firebaseConfig = {
       apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
@@ -48,6 +44,7 @@
 
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
+    const auth = getAuth(app);
 
     const statusDiv = document.getElementById('status');
     const params = new URLSearchParams(window.location.search);
@@ -58,45 +55,54 @@
       throw new Error('Missing vehicle');
     }
 
-async function flipKeyStatus() {
-  try {
-    const vehicleRef = ref(db, 'vehicles/' + vehicle);
-    const snap = await get(vehicleRef);
-
-    if (!snap.exists()) {
-      statusDiv.textContent = 'Vehicle not found in database.';
-      return;
-    }
-
-    const data = snap.val();
-    const currentStatus = data.keyStatus || 'atFrontDesk';
-    const newStatus = currentStatus === 'atFrontDesk' ? 'withStaff' : 'atFrontDesk';
-
-    const updates = {
-      keyStatus: newStatus,
-      lastKeyChange: Date.now()
-    };
-
-    // ✅ enable alarm if being passed to staff
-    if (newStatus === 'withStaff') {
-      updates.alarm = true;
-    }
-
-    await update(vehicleRef, updates);
-
-    const logRef = push(ref(db, `vehicleLogs/${vehicle}`));
-    await set(logRef, {
-      action: `keyStatus changed to ${newStatus}`,
-      timestamp: Date.now()
+    onAuthStateChanged(auth, async (user) => {
+      if (!user) {
+        window.location.href = `index.html?redirect=keyhand.html&vehicle=${encodeURIComponent(vehicle)}`;
+        return;
+      }
+      await flipKeyStatus(user.email);
     });
 
-    statusDiv.textContent = `✅ Key status for "${vehicle}" changed to: ${newStatus}`;
-  } catch (error) {
-    statusDiv.textContent = '❌ Error: ' + (error.message || error);
-  }
-}
+    async function flipKeyStatus(userEmail) {
+      try {
+        const vehicleRef = ref(db, 'vehicles/' + vehicle);
+        const snap = await get(vehicleRef);
 
-    flipKeyStatus();
+        if (!snap.exists()) {
+          statusDiv.textContent = 'Vehicle not found in database.';
+          return;
+        }
+
+        const data = snap.val();
+        const currentStatus = data.keyStatus || 'atFrontDesk';
+        const newStatus = currentStatus === 'atFrontDesk' ? 'withStaff' : 'atFrontDesk';
+
+        const updates = {
+          keyStatus: newStatus,
+          lastKeyChange: Date.now()
+        };
+
+        if (newStatus === 'withStaff') {
+          updates.alarm = true;
+          updates.keyHeldBy = userEmail;
+        } else {
+          updates.keyHeldBy = null;
+        }
+
+        await update(vehicleRef, updates);
+
+        const logRef = push(ref(db, `vehicleLogs/${vehicle}`));
+        await set(logRef, {
+          userEmail,
+          action: `keyStatus changed to ${newStatus}`,
+          timestamp: Date.now()
+        });
+
+        statusDiv.textContent = `✅ Key status for "${vehicle}" changed to: ${newStatus}`;
+      } catch (error) {
+        statusDiv.textContent = '❌ Error: ' + (error.message || error);
+      }
+    }
   </script>
 </body>
 </html>
