--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" />
   <title>Fleet Login</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./style.css" />
   <style>
     body {
-      background: #f0f0f0;
-      margin: 0;
-      padding: 0;
+      background-color: #5cbde5;
+      background-image: url('./skybackgroundmidnightfeather.png');
+      background-repeat: repeat;
+      background-size: 400px;
       font-family: sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
+      margin: 0;
     }
     .login-container {
       background: white;
@@ -22,94 +25,107 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
       text-align: center;
     }
-    input, button {
+    h1 {
+      margin-bottom: 1rem;
+    }
+    input {
+      display: block;
       margin: 0.5rem auto;
       padding: 0.5rem;
-      font-size: 1rem;
-      display: block;
       width: 200px;
+      font-size: 1rem;
+    }
+    button {
+      margin-top: 1rem;
+      padding: 0.5rem 1rem;
+      font-size: 1rem;
+      cursor: pointer;
     }
     #message {
-      color: red;
       margin-top: 1rem;
+      color: red;
     }
   </style>
 </head>
 <body>
-  <div class="login-container">
-    <h1>Fleet Login</h1>
-    <input type="email" id="login-email" placeholder="Email" />
-    <input type="password" id="login-password" placeholder="Password" />
-    <button id="login-btn">Login</button>
-    <div id="message"></div>
-  </div>
 
-  <script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js';
-    import { getAuth, signInWithEmailAndPassword } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js';
-    import { getDatabase, ref, get, set, child } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
+<div class="login-container">
+  <h1>Fleet Login</h1>
+  <input type="email" id="login-email" placeholder="Email" />
+  <input type="password" id="login-password" placeholder="Password" />
+  <button id="login-btn">Login</button>
+  <div id="message"></div>
+</div>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
-      authDomain: "yfned-fleet-nfc.firebaseapp.com",
-      databaseURL: "https://yfned-fleet-nfc-default-rtdb.firebaseio.com",
-      projectId: "yfned-fleet-nfc",
-      storageBucket: "yfned-fleet-nfc.appspot.com",
-      messagingSenderId: "482363667898",
-      appId: "1:482363667898:web:4b0364e891a221e9631983"
-    };
+<script type="module">
+  import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js';
+  import { getAuth, signInWithEmailAndPassword } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js';
+  import { getDatabase, ref, get, set, child } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getDatabase(app);
+  const firebaseConfig = {
+    apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
+    authDomain: "yfned-fleet-nfc.firebaseapp.com",
+    databaseURL: "https://yfned-fleet-nfc-default-rtdb.firebaseio.com",
+    projectId: "yfned-fleet-nfc",
+    storageBucket: "yfned-fleet-nfc.appspot.com",
+    messagingSenderId: "482363667898",
+    appId: "1:482363667898:web:4b0364e891a221e9631983",
+    measurementId: "G-LK66DQVKW4"
+  };
 
-    const loginBtn = document.getElementById('login-btn');
-    const emailInput = document.getElementById('login-email');
-    const passInput = document.getElementById('login-password');
-    const msgDiv = document.getElementById('message');
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const db = getDatabase(app);
 
-    const queryParams = new URLSearchParams(window.location.search);
-    const redirectPage = queryParams.get("redirect");
-    const vehicle = queryParams.get("vehicle");
+  const loginBtn = document.getElementById('login-btn');
+  const emailInput = document.getElementById('login-email');
+  const passInput = document.getElementById('login-password');
+  const msgDiv = document.getElementById('message');
 
-    loginBtn.addEventListener('click', async () => {
-      msgDiv.textContent = '';
-      const email = emailInput.value;
-      const pass = passInput.value;
+  loginBtn.addEventListener('click', async () => {
+    msgDiv.textContent = '';
+    const email = emailInput.value;
+    const pass = passInput.value;
 
-      if (!email || !pass) {
-        msgDiv.textContent = 'Please enter email and password.';
+    if (!email || !pass) {
+      msgDiv.textContent = 'Please enter email and password.';
+      return;
+    }
+
+    try {
+      const userCredential = await signInWithEmailAndPassword(auth, email, pass);
+      const user = userCredential.user;
+
+      const userRef = ref(db, 'users/' + user.uid);
+      const userSnap = await get(userRef);
+      if (!userSnap.exists()) {
+        await set(userRef, {
+          email: user.email,
+          role: 'staff'
+        });
+      }
+
+      const urlParams = new URLSearchParams(window.location.search);
+      const redirect = urlParams.get('redirect');
+      const vehicle = urlParams.get('vehicle');
+      if (redirect === 'keyhand.html' && vehicle) {
+        window.location.href = `keyhand.html?vehicle=${encodeURIComponent(vehicle)}`;
         return;
       }
 
-      try {
-        const userCredential = await signInWithEmailAndPassword(auth, email, pass);
-        const user = userCredential.user;
+      const roleSnap = await get(child(ref(db), `users/${user.uid}/role`));
+      const role = roleSnap.exists() ? roleSnap.val() : 'staff';
 
-        const userRef = ref(db, 'users/' + user.uid);
-        const userSnap = await get(userRef);
-
-        if (!userSnap.exists()) {
-          await set(userRef, {
-            email: user.email,
-            role: 'staff'
-          });
-        }
-
-        const roleSnap = await get(child(ref(db), `users/${user.uid}/role`));
-        const role = roleSnap.exists() ? roleSnap.val() : 'staff';
-
-        if (redirectPage && vehicle) {
-          window.location.href = `${redirectPage}?vehicle=${encodeURIComponent(vehicle)}`;
-        } else if (role === 'fleetmaster') {
-          window.location.href = 'fleetmaster.html';
-        } else {
-          window.location.href = 'calendar.html';
-        }
-      } catch (err) {
-        msgDiv.textContent = 'Login failed: ' + err.message;
+      if (role === 'fleetmaster') {
+        window.location.href = 'fleetmaster.html';
+      } else {
+        window.location.href = 'calendar.html';
       }
-    });
-  </script>
+    } catch (err) {
+      msgDiv.textContent = 'Login failed: ' + err.message;
+    }
+  });
+</script>
+
 </body>
 </html>
