--- a/fleetmaster.html
+++ b/fleetmaster.html
@@ -31,7 +31,7 @@
       cursor: pointer;
     }
     .container {
-      max-width: 1000px;
+      max-width: 1200px;
       margin: 2rem auto;
       background: white;
       padding: 2rem;
@@ -64,7 +64,6 @@
     .signedOut { background-color: #3498db; color: white; }
     .available { background-color: #bdc3c7; color: black; }
     .alarm { background-color: #e74c3c; color: white; }
-    .alarm-icon { font-size: 1.2rem; margin-right: 0.5rem; color: red; }
     .alarm-row { background-color: #ffdddd !important; }
   </style>
 </head>
@@ -82,8 +81,10 @@
       <tr>
         <th>Vehicle Name</th>
         <th>Key Status</th>
+        <th>Key Held By</th>
         <th>Vehicle Status</th>
         <th>Alarm</th>
+        <th>Demo Trigger</th>
       </tr>
     </thead>
     <tbody></tbody>
@@ -92,108 +93,4 @@
 
 <script type="module">
   import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js';
-  import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js';
-  import { getDatabase, ref, get, update } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
-
-  const app = initializeApp({
-    apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
-    authDomain: "yfned-fleet-nfc.firebaseapp.com",
-    databaseURL: "https://yfned-fleet-nfc-default-rtdb.firebaseio.com",
-    projectId: "yfned-fleet-nfc",
-    storageBucket: "yfned-fleet-nfc.appspot.com",
-    messagingSenderId: "482363667898",
-    appId: "1:482363667898:web:4b0364e891a221e9631983"
-  });
-
-  const auth = getAuth(app);
-  const db = getDatabase(app);
-
-  const logoutBtn = document.getElementById('logout-btn');
-  logoutBtn.addEventListener('click', () => signOut(auth));
-
-  const tableBody = document.querySelector('#vehicle-table tbody');
-
-  onAuthStateChanged(auth, async user => {
-    if (!user) return window.location.href = 'index.html';
-
-    const vehiclesSnap = await get(ref(db, 'vehicles'));
-    if (!vehiclesSnap.exists()) return;
-
-    const vehicles = vehiclesSnap.val();
-    const now = Date.now();
-
-    Object.entries(vehicles).forEach(([name, data]) => {
-      const keyStatus = data.keyStatus || 'atFrontDesk';
-      const vehicleStatus = data.status || 'available';
-      const lastKeyChange = data.lastKeyChange || 0;
-      const alarmActive = data.alarm === true;
-
-      const elapsedMs = now - lastKeyChange;
-      const overHour = elapsedMs > 3600000;
-      const shouldTriggerAlarm = keyStatus === 'withStaff' && vehicleStatus === 'available' && alarmActive && overHour;
-
-      const row = document.createElement('tr');
-      if (shouldTriggerAlarm) row.classList.add('alarm-row');
-
-      const nameCell = document.createElement('td');
-      nameCell.innerHTML = shouldTriggerAlarm ? '🚨 ' + name : name;
-
-      // --- Key Status Button ---
-      const keyBtn = document.createElement('button');
-      keyBtn.textContent = keyStatus === 'atFrontDesk' ? 'Pass to Staff' : 'Return to Front Desk';
-      keyBtn.className = 'toggle-btn ' + keyStatus;
-      keyBtn.onclick = async () => {
-        const newStatus = keyStatus === 'atFrontDesk' ? 'withStaff' : 'atFrontDesk';
-        await update(ref(db, 'vehicles/' + name), {
-          keyStatus: newStatus,
-          lastKeyChange: Date.now(),
-          alarm: newStatus === 'withStaff' // auto enable alarm
-        });
-        location.reload();
-      };
-
-      // --- Vehicle Status Button ---
-      const statusBtn = document.createElement('button');
-      statusBtn.textContent = vehicleStatus === 'available' ? 'Mark as Signed Out' : 'Mark as Available';
-      statusBtn.className = 'toggle-btn ' + (vehicleStatus === 'available' ? 'available' : 'signedOut');
-      statusBtn.onclick = async () => {
-        const newStatus = vehicleStatus === 'available' ? 'signedOut' : 'available';
-        const alarmReset = newStatus === 'signedOut'; // auto disable
-        await update(ref(db, 'vehicles/' + name), {
-          status: newStatus,
-          alarm: alarmReset ? false : alarmActive
-        });
-        location.reload();
-      };
-
-      // --- Alarm Toggle ---
-      const alarmBtn = document.createElement('button');
-      alarmBtn.textContent = alarmActive ? 'Disable Alarm' : 'Enable Alarm';
-      alarmBtn.className = 'toggle-btn alarm';
-      alarmBtn.onclick = async () => {
-        await update(ref(db, 'vehicles/' + name), {
-          alarm: !alarmActive
-        });
-        location.reload();
-      };
-
-      const keyCell = document.createElement('td');
-      const statusCell = document.createElement('td');
-      const alarmCell = document.createElement('td');
-
-      keyCell.appendChild(keyBtn);
-      statusCell.appendChild(statusBtn);
-      alarmCell.appendChild(alarmBtn);
-
-      row.appendChild(nameCell);
-      row.appendChild(keyCell);
-      row.appendChild(statusCell);
-      row.appendChild(alarmCell);
-
-      tableBody.appendChild(row);
-    });
-  });
-</script>
-
-</body>
-</html>
+  import { getAuth, &#8203;:contentReference[oaicite:0]{index=0}&#8203;
