--- a/fleetmaster.html
+++ b/fleetmaster.html
@@ -93,4 +93,117 @@
 
 <script type="module">
   import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js';
-  import { getAuth, &#8203;:contentReference[oaicite:0]{index=0}&#8203;
+  import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js';
+  import { getDatabase, ref, get, update } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
+
+  const app = initializeApp({
+    apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
+    authDomain: "yfned-fleet-nfc.firebaseapp.com",
+    databaseURL: "https://yfned-fleet-nfc-default-rtdb.firebaseio.com",
+    projectId: "yfned-fleet-nfc",
+    storageBucket: "yfned-fleet-nfc.appspot.com",
+    messagingSenderId: "482363667898",
+    appId: "1:482363667898:web:4b0364e891a221e9631983"
+  });
+
+  const auth = getAuth(app);
+  const db = getDatabase(app);
+
+  const logoutBtn = document.getElementById('logout-btn');
+  logoutBtn.addEventListener('click', () => signOut(auth));
+
+  const tableBody = document.querySelector('#vehicle-table tbody');
+
+  onAuthStateChanged(auth, async user => {
+    if (!user) return window.location.href = 'index.html';
+
+    const snap = await get(ref(db, 'vehicles'));
+    if (!snap.exists()) return;
+
+    const now = Date.now();
+    const vehicles = snap.val();
+
+    Object.entries(vehicles).forEach(([name, data]) => {
+      const keyStatus = data.keyStatus || 'atFrontDesk';
+      const keyHeldBy = data.keyHeldBy || '';
+      const vehicleStatus = data.status || 'available';
+      const lastKeyChange = data.lastKeyChange || 0;
+      const alarm = data.alarm === true;
+      const elapsed = now - lastKeyChange;
+      const overdue = elapsed > 3600000 && keyStatus === 'withStaff' && vehicleStatus === 'available' && alarm;
+
+      const row = document.createElement('tr');
+      if (overdue) row.classList.add('alarm-row');
+
+      const nameCell = document.createElement('td');
+      nameCell.innerHTML = overdue ? `🚨 ${name}` : name;
+
+      const keyBtn = document.createElement('button');
+      keyBtn.textContent = keyStatus === 'atFrontDesk' ? 'Pass to Staff' : 'Return to Front Desk';
+      keyBtn.className = 'toggle-btn ' + keyStatus;
+      keyBtn.onclick = async () => {
+        const toStaff = keyStatus === 'atFrontDesk';
+        await update(ref(db, 'vehicles/' + name), {
+          keyStatus: toStaff ? 'withStaff' : 'atFrontDesk',
+          keyHeldBy: toStaff ? user.email : null,
+          lastKeyChange: Date.now(),
+          alarm: toStaff
+        });
+        location.reload();
+      };
+
+      const heldByCell = document.createElement('td');
+      heldByCell.textContent = keyHeldBy;
+
+      const vehicleBtn = document.createElement('button');
+      vehicleBtn.textContent = vehicleStatus === 'available' ? 'Mark as Signed Out' : 'Mark as Available';
+      vehicleBtn.className = 'toggle-btn ' + (vehicleStatus === 'available' ? 'available' : 'signedOut');
+      vehicleBtn.onclick = async () => {
+        const isOut = vehicleStatus === 'available';
+        await update(ref(db, 'vehicles/' + name), {
+          status: isOut ? 'signedOut' : 'available',
+          alarm: isOut ? false : alarm
+        });
+        location.reload();
+      };
+
+      const alarmBtn = document.createElement('button');
+      alarmBtn.textContent = alarm ? 'Disable Alarm' : 'Enable Alarm';
+      alarmBtn.className = 'toggle-btn alarm';
+      alarmBtn.onclick = async () => {
+        await update(ref(db, 'vehicles/' + name), { alarm: !alarm });
+        location.reload();
+      };
+
+      const triggerBtn = document.createElement('button');
+      triggerBtn.textContent = '🔔 Trigger';
+      triggerBtn.className = 'toggle-btn alarm';
+      triggerBtn.onclick = async () => {
+        await update(ref(db, 'vehicles/' + name), { alarm: true });
+        location.reload();
+      };
+
+      const cells = [
+        nameCell,
+        Object.assign(document.createElement('td'), { appendChild: () => keyBtn }),
+        heldByCell,
+        Object.assign(document.createElement('td'), { appendChild: () => vehicleBtn }),
+        Object.assign(document.createElement('td'), { appendChild: () => alarmBtn }),
+        Object.assign(document.createElement('td'), { appendChild: () => triggerBtn })
+      ];
+
+      const rowCells = [nameCell, keyBtn, heldByCell, vehicleBtn, alarmBtn, triggerBtn];
+      rowCells.forEach(c => {
+        const td = document.createElement('td');
+        if (c instanceof HTMLElement) td.appendChild(c);
+        else td.textContent = c;
+        row.appendChild(td);
+      });
+
+      tableBody.appendChild(row);
+    });
+  });
+</script>
+
+</body>
+</html>
