--- a/fleetmaster.html
+++ b/fleetmaster.html
@@ -59,11 +59,11 @@
       cursor: pointer;
       font-weight: bold;
     }
-    .atFrontDesk { background-color: #f5a623; color: white; }
+    .atFrontDesk { background-color: #e0e257; color: white; }
     .withStaff { background-color: #2ecc71; color: white; }
-    .signedOut { background-color: #3498db; color: white; }
-    .available { background-color: #bdc3c7; color: black; }
-    .alarm { background-color: #e74c3c; color: white; }
+    .signedOut { background-color: #e7bbd2; color: white; }
+    .available { background-color: #5cbde5; color: black; }
+    .alarm { background-color: #d4282f; color: white; }
     .alarm-row { background-color: #ffdddd !important; }
   </style>
 </head>
