--- a/fleetmaster.html
+++ b/fleetmaster.html
@@ -60,8 +60,8 @@
       font-weight: bold;
     }
     .atFrontDesk { background-color: #e0e257; color: white; }
-    .withStaff { background-color: #2ecc71; color: white; }
-    .signedOut { background-color: #e7bbd2; color: white; }
+    .withStaff { background-color: #2ecc71; color: black; }
+    .signedOut { background-color: #e7bbd2; color: black; }
     .available { background-color: #5cbde5; color: black; }
     .alarm { background-color: #d4282f; color: white; }
     .alarm-row { background-color: #ffdddd !important; }
