--- a/fleetmaster.html
+++ b/fleetmaster.html
@@ -59,7 +59,7 @@
       cursor: pointer;
       font-weight: bold;
     }
-    .atFrontDesk { background-color: #e0e257; color: white; }
+    .atFrontDesk { background-color: #e0e257; color: black; }
     .withStaff { background-color: #2ecc71; color: black; }
     .signedOut { background-color: #e7bbd2; color: black; }
     .available { background-color: #5cbde5; color: black; }
